# resume_scanner

./: .gitignore  sample  test
backend/: pyproject.toml  requirements  startup_commands
backend/app/: event_listener.py  main.py  test.py  worker.py
backend/app/api/routes/: auth.py  dashboard.py  job.py  ranking_routes.py  resume.py  websocket.py
backend/app/core/: auth_dependency.py  auth_service.py  config.py  exceptions.py  logging.py  security.py  ws_security.py
backend/app/crud/: job.py  ranking.py  resume.py  user.py
backend/app/db/: mongodb.py  redis_client.py
backend/app/models/: job.py  resume.py  user.py
backend/app/schemas/: job.py  ranking.py  resume.py  user.py
backend/app/services/: candidate_info.py  cleaner.py  embedding.py  job_parser.py  llm.py  pubsub_listeners.py  ranking_resumes.py  resume_matcher.py  resume_parser.py  scoring.py
backend/app/utils/: email.py  email_service.py  gdrive.py  ws_manager.py
backend/temp_uploads/31282b71-1ea3-4bc7-9a04-a742b459faa1/test_resumes/: Hanzla Sohaib CV.docx
docs/: implimentation.md  improvements.md  requirements.md  schemas.md
docs/system_design/: 10_future_enhancements.md  11_final_summary.md  1_system_overview.md  2_design_goals.md  3_high_level_architecture.md  4_component_design.md  5_data_model_design_hybrid_storage_architecture.md  6_database_design_mongodb.md  7_ai_and_algorithm_design.md  8_scalability_design.md  9_security_considerations.md
frontend/: index.html  package-lock.json  package.json  resume_scanner_hr_platform_v2.html  tailwind.config.js
frontend/api/: authapi.js  (+4 more)
(+42 files in other folders)
