[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.2.1",
    "uvicorn>=0.41.0",
]
